...
                  obscureText: _obscureCurrentPassword,
                  style: const TextStyle(
                    fontFamily: 'Poppins',
                    color: Colors.white,
                  ),
                  decoration: InputDecoration(
                    labelText: 'Current Password',
                    labelStyle: const TextStyle(
                      fontFamily: 'Poppins',
                      color: Colors.white70,
                    ),
                    hintStyle: const TextStyle(
                      fontFamily: 'Poppins',
...
                  obscureText: _obscureNewPassword,
                  style: const TextStyle(
                    fontFamily: 'Poppins',
                    color: Colors.white,
                  ),
                  decoration: InputDecoration(
                    labelText: 'New Password',
                    labelStyle: const TextStyle(
                      fontFamily: 'Poppins',
                      color: Colors.white70,
                    ),
                    hintStyle: const TextStyle(
                      fontFamily: 'Poppins',
...
                  obscureText: _obscureConfirmPassword,
                  style: const TextStyle(
                    fontFamily: 'Poppins',
                    color: Colors.white,
                  ),
                  decoration: InputDecoration(
                    labelText: 'Confirm New Password',
                    labelStyle: const TextStyle(
                      fontFamily: 'Poppins',
                      color: Colors.white70,
                    ),
                    hintStyle: const TextStyle(
                      fontFamily: 'Poppins',
...
